fix: navbarList display on small screens

--- a/components/layout/navbar/navbar.module.css
+++ b/components/layout/navbar/navbar.module.css
@@ -36,4 +36,7 @@
     display: flex;
     justify-content: space-between;
   }
+  .navbar .navbarList {
+    display: none;
+  }
 }
